Unify use of mappings across Python and Pyjinn
Reuse Script.TypeChecker from the Pyjinn project to resolve invocations
of constructors and methods from the built-in "java_*" script functions
and use the built-in mappings mechanism for resolution of class, method,
and field names. Updated script functions:

- java_class
- java_ctor
- java_new_instance
- java_member
- java_call_method
- java_access_field

Note that this change is not compatible with lib_java v2. To manually
update lib_java.py v2, delete or comment out lines 455 and 456.

Move NameMappings sources to their own package:
net.minescript.common.mappings

Add built-in command `\reload_mappings` for manually reloading mappings
from the files installed in `minecraft/minescript/mappings'.
(Mappings files are automatically loaded only when the mod loads.)

Remove support for mappings embedded in script comments like "<mappings
...>". This was problematic for a number of reasons, including that
inline mappings could be loaded only from the main script and not
imported libraries. Also, it would be awkward to apply to Python scripts
because it would require reading the script file twice. Also remove
support for dumping the mappings when a script contains:
"# @dump_active_mappings"

Rename Minescript static Java method loadScript() to
loadPyjinnScript().